[package]
name = "yyc_forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-macros = "0.4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5.0", features = ["cors"] }
http = "1.0.0"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-rustls"] }
chrono = "0.4.31"




